# fitbit-rs

./: .gitignore  Cargo.toml  auth_token
examples/: get_weight_log.rs
src/: api.rs  error.rs  lib.rs  models.rs  oauth.rs  util.rs
src/api/: body.rs  body_time_series.rs
src/models/: activity.rs  body.rs  devices.rs  heart_rate.rs
src/models/activity/: goals.rs  lifetime_stats.rs  summary.rs  time_series.rs
src/models/body/: fat.rs  goals.rs  weight.rs
src/models/heart_rate/: intraday_time_series.rs  time_series.rs
src/models/sleep/: goals.rs  list.rs  logs.rs
src/models/sleep/goals/: get.rs  update.rs
src/models/user/: profile.rs
src/models/user/badges/: get.rs
src/models/user/profile/: update.rs
