[package]
name = "fitbit-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
oauth2 = "4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
url = "2"
tokio = { version = "1", default-features = false }

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
